Bug 1262681 - Draw target also has to be valid for us to demand a snapshot. r=bas